@@ -29,7 +29,6 @@ export async function searchWeather() {
 
   content.textContent = "";
   const weatherData = await response.json();
-  // console.log(weatherData);
   processData(weatherData);
   searchButton();
 }
